--- a/styles/style.css
+++ b/styles/style.css
@@ -1,21 +1,43 @@
-*{
-    width: 700px;
-    
+* {
+    max-width: 700px;
+    font-family: Arial, Helvetica, sans-serif;
     margin: auto;
-    
-    background-color: rgb(165, 65, 29);
+    padding: 10px;
+    text-align: center;
 }
-img{
+
+body {
+    background-color: #3007a0d2;
+}
+
+.cabeçalho {
+    color: antiquewhite;
+    background-image: url(../image/pexels.jpg);
+    background-size: 100%;
+}
+
+.minhafoto {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+p {
+    text-align: left;
+}
+
+img {
     width: 32px;
     height: 32px;
-    padding: 10px;
 }
-ul{
+
+ul {
     list-style-type: none;
-    padding: 10px;
-    
-    
+
 }
-.tec{
+
+.tec {
     display: inline;
+
 }
